2003-02-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/String/surrogate.java: New test.

2003-02-21  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/zip/ZipEntry/setComment.java: New test.

2003-02-21  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/zip/ZipEntry/newZipEntry.java: New test.

2003-02-18  Raif S. Naffah  <raif@fl.net.au>

	* gnu/testlet/java/math/BigInteger/modInverse.java (testRecursion):
	New method.

2003-02-16  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/String/getBytes13.java: Tags JDK13 only.

2003-02-16  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/String/getBytes14.java: Add tests for
	US-ASCII, windows-1252, ISO-8859-1, ISO-8859-15, ISO8859_15, UTF-16BE
	and UTF-16LE

2003-02-16  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Class/reflect2.java: Guard against NullPointer
	and ArrayOutOfBoundsExceptions on failures.

2003-02-14  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/PipedStream/PipedStreamTestWriter.java
	(ready): New field.
	(waitTillReady): New method.
	(run): Set ready field.
	* gnu/testlet/java/io/PipedStream/Test.java (test): Call waitTillReady
	before testing available().

2003-02-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/InputStreamReader/jdk11.java (test): Just check
	that encoding is non-null when opened and null when closed. Checking
	the actual encoding name is as good as impossible pre 1.4.
	* gnu/testlet/java/io/OutputStreamWriter/jdk11.java (test):Likewise.

2003-02-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/jar/JarFile/basic.java: Don't test order,
	only test that all entries have the correct content.

2003-02-13  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/BufferedOutputStream/interrupt.java (test): In
	theory what happens when a InterruptedIOException is thrown should be
	in the specification, in practice it is never defined.

2003-02-12  Tom Tromey  <tromey@redhat.com>
